---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Removed a misleading Pro Tip; They are super old and due for a rewrite anyways
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 13. 12. 2020
  Bugfixes:
    - Fixed a crash when opening the interface with no subfactories that was introduced in the last version

---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 13. 12. 2020
  Changes:
    - The message that your current subfactory is linearly dependant is now shown more consistently
  Bugfixes:
    - Fixed a frequent crash when manipulating a subfactory that has linearly dependant recipes
    - Fixed that the example subfactory was improperly cached, leading to several issues all over the UI
    - Fixed that hitting certain Factory Planer hotkeys before opening the UI for the first time would crash
    - Fixed that the matrix solver calculations would be incorrect when productivity modules were involved
    - Fixed a crash on migration

---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 11. 12. 2020
  Features:
    - Redesigned the main interface. This means that some things are in different spots than they used to be, and some niche features got lost along the way. I'm sorry about those few that went missing, but I needed to get this done in a reasonable amount of time. If there is anything specific you're dearly missing, please let me know on the mod portal or on Discord.