@@ -233,7 +233,7 @@ module_issue_select_module=Select the module you want to add
 module_issue_select_amount=Select a module amount greater than 0
 beacon_amount_tt=This specifies how many beacons each individual machine will be affected by. You can put a decimal number here, which could be used to reflect the fact that some of your machines might be covered by a different amount of beacons.
 beacon_total=Total
-beacon_total_tt=This specifies the absolute amount of beacons that you use for this recipe in your actual factory. That information is then included in the energy calculations.
+beacon_total_tt=This specifies the absolute amount of beacons that you use for this recipe in your actual factory. That information is then included in the energy consumption calculations.
 beacon_selector_tt=Use a selection tool to count the beacons in your already-built factory
 beacon_issue_select_beacon=Select the beacon you want to use
 beacon_issue_set_amount=Enter a beacon amount per machine greater than 0
@@ -482,5 +482,5 @@ pu_belt=__plural_for_parameter_1_{1=Belt|rest=Belts}__
 pl_lane=__plural_for_parameter_1_{1=lane|rest=lanes}__
 pu_lane=__plural_for_parameter_1_{1=Lane|rest=Lanes}__
 
-u_energy=Energy
+u_power=Power
 u_pollution=Pollution
