@@ -204,7 +204,7 @@ function builders.beacon(line, parent_flow, metadata)
     end
 end
 
-function builders.energy(line, parent_flow, metadata)
+function builders.power(line, parent_flow, metadata)
     local pollution_line = (metadata.pollution_column) and ""
       or {"fp.newline", {"fp.name_value", {"fp.u_pollution"}, ui_util.format_SI_value(line.pollution, "P/m", 5)}}
     parent_flow.add{type="label", caption=ui_util.format_SI_value(line.energy_consumption, "W", 3),
@@ -350,7 +350,7 @@ local all_production_columns = {
     {name="percentage", caption="%", tooltip={"fp.column_percentage_tt"}, minimal_width=0, alignment="center"},
     {name="machine", caption={"fp.pu_machine", 1}, tooltip=nil, minimal_width=0, alignment="left"},
     {name="beacon", caption={"fp.pu_beacon", 1}, tooltip=nil, minimal_width=0, alignment="left"},
-    {name="energy", caption={"fp.u_energy"}, tooltip=nil, minimal_width=0, alignment="center"},
+    {name="power", caption={"fp.u_power"}, tooltip=nil, minimal_width=0, alignment="center"},
     {name="pollution", caption={"fp.u_pollution"}, tooltip=nil, minimal_width=0, alignment="center"},
     {name="products", caption={"fp.pu_product", 2}, tooltip=nil, minimal_width=0, alignment="left"},
     {name="byproducts", caption={"fp.pu_byproduct", 2}, tooltip=nil, minimal_width=0, alignment="left"},
